// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should show tooltip when hovering slider handler 1`] = `
<div>
  <div
    class="jc-tooltip  jc-tooltip-placement-top "
  >
    <div
      class="jc-tooltip-content"
    >
      <div
        class="jc-tooltip-arrow"
      />
      <div
        class="jc-tooltip-inner"
      >
        30
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
<div>
  <div
    class="jc-tooltip  jc-tooltip-placement-top  jc-tooltip-hidden"
  >
    <div
      class="jc-tooltip-content"
    >
      <div
        class="jc-tooltip-arrow"
      />
      <div
        class="jc-tooltip-inner"
      >
        30
      </div>
    </div>
  </div>
</div>
`;
